kubernetes/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: landing
  name: dap-core-landing-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /healthz {
        return 200 "heatlhy\n";
      }
spec:
  rules:
    - host: #{aks-api-domain}#.cloudapp.repsol.com
      http:
        paths:
        - path: /dap-core-landing-api/(.*)
          backend:
            serviceName: dap-core-landing-api
            servicePort: 80
---
